<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".views.activity.AddRecipeActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/breakfast_svg" />

                <ImageButton
                    android:id="@+id/pickImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/edit"
                    android:tint="@color/primary" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/enter_recipe_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/enter_recipe_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Enter Preparation Time (in minutes)"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Enter Cook Time (in minutes)"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cookTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/recipe_ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recipeIngredientLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/add"
                app:endIconMode="custom"
                app:endIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipeIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/add_direction"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_cuisine"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cuisineDropdown"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autoCompleteCuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/not_selected" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/add_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipePrivateNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/upload_recipe"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>